--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <body>
     <div class="header">
       <div class="container">
-
+        <ul>
+          <li>About</li>
+          <li>Blog</li>
+          <li>Help</li>
+          <li>Contact</li>
+        </ul>
       </div>
     </div>
 
