--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="header">
       <div class="container">
         <ul>
+          <li><img src="https://s3.amazonaws.com/codecademy-content/projects/junction/logo.svg" alt=""></li>
           <li>About</li>
           <li>Blog</li>
           <li>Help</li>
