--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
 
     <div class="supporting">
       <div class="container">
+        <div class="row">
+          <div class="col-md-4">
 
+          </div>
+          <div class="col-md-4">
+
+          </div>
+          <div class="col-md-4">
+
+          </div>
+        </div>
       </div>
     </div>
   </body>
