--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-
+            <img src="https://s3.amazonaws.com/codecademy-content/projects/junction/read.svg" alt="">
+            <h2>Read</h2>
+            <p>Discover new stories and follow your favorite writers.</p>
           </div>
           <div class="col-md-4">
 
