--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
             <p>Discover new stories and follow your favorite writers.</p>
           </div>
           <div class="col-md-4">
-
+            <img src="https://s3.amazonaws.com/codecademy-content/projects/junction/write.svg" alt="">
+            <h2>Write</h2>
+            <p>Create stories about our world, or entirely new worlds.</p>
           </div>
           <div class="col-md-4">
-
+            <img src="https://s3.amazonaws.com/codecademy-content/projects/junction/talk.svg" alt="">
+            <h2>Talk</h2>
+            <p>Join the conversation by talking with your favorite readers and your fans.</p>
           </div>
         </div>
       </div>
