start new section

--- a/index.html
+++ b/index.html
@@ -46,5 +46,11 @@
         </div>
       </div>
     </div>
+
+    <div class="footer">
+      <div class="contain">
+        <a href="#">Join</a>
+      </div>
+    </div>
   </body>
 </html>
