btn position on large screens

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="footer">
-      <div class="contain">
+      <div class="container">
         <a href="#">Join</a>
       </div>
     </div>
