--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       </div>
     </div>
 
-    <div class="footer">
-      <div class="container">
-        <a href="#">Join</a>
-      </div>
-    </div>
+      <footer>
+        <div class="container">
+          <a href="#">Join</a>
+        </div>
+      </footer>
   </body>
 </html>
