--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="header">
+    <header>
       <div class="container">
         <ul>
           <li><img src="https://s3.amazonaws.com/codecademy-content/projects/junction/logo.svg" alt=""></li>
@@ -17,8 +17,7 @@
           <li>Contact</li>
         </ul>
       </div>
-    </div>
-
+    </header>
 
     <div class="jumbotron">
       <div class="container">
