use section tag

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       </div>
     </header>
 
-    <div class="jumbotron">
+    <section class="jumbotron">
       <div class="container">
         <h1>Meet Junction</h1>
       </div>
-    </div>
+    </section>
 
-    <div class="supporting">
+    <section class="supporting">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
@@ -45,7 +45,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
       <footer>
         <div class="container">
