--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <footer>
         <div class="container">
-          <a href="#">Join</a>
+          <a href="#" class="btn btn-default">Join</a>
         </div>
       </footer>
   </body>
