--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="supporting">
       <div class="container">
         <div class="row">
-          <!-- would be good to use Sass to make these columns semnatic -->
+          <!-- last time used Sass to make these columns semnatic -->
           <div class="col-md-4">
             <img src="https://s3.amazonaws.com/codecademy-content/projects/junction/read.svg" alt="">
             <h2>Read</h2>
